# campusMarketRL

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  config.py  graders.py  gym_env.py  inference.py  init_shops.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  structured_stdout.py  test_env.py  test_seasonal_llm.py  validate-submission.sh
baseline/: inference.py
campus_market_env/: README.md  client.py  gym_env.py  models.py  openenv.yaml  pyproject.toml
campus_market_env/server/: app.py  environment.py  requirements.txt
docs/: GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  SEASONAL_TREND_SYSTEM.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
server/: Dockerfile  __init__.py  app.py  competitor_model.py  engine.py  environment.py  seasonal_trend_model.py  shop_generator.py  state_manager.py  student_model.py  trend_model.py
static/: index.html
tasks/: __init__.py  definitions.py  easy.py  grader.py  graders.py  grading_report.txt  hard.py  medium.py  task_easy.py  task_hard.py
